added map functionality

--- a/app/templates/landingpage.html
+++ b/app/templates/landingpage.html
@@ -11,7 +11,7 @@
 <body>
   <div class ="LandingHome">
     <div class ="LandingHome">
-      <p class = "heading">Connect. Learn & Prosper<br>Your tool to succeed</p>
+      <p class = "heading">Connect Learn & Prosper<br>Your tool to succeed</p>
       <p class = "subheading">A SOCIAL LEARNING TOOL</p>
       <p class ="subheading2">NYConnect</p>
       <button class = "signup"><a href="/signup">Get Started</a></button>
