--- a/app/templates/layouts/index.html
+++ b/app/templates/layouts/index.html
@@ -9,6 +9,7 @@
         <h3>{{id}}</h3>
         <div id="{{id}}"></div>
     {% endfor %}
+    <div id="myDiv"></div>
 
 </body>
 
@@ -19,18 +20,17 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!-- Plotly.js -->
-    <script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <script type="text/javascript">
 
         var graphs = {{graphJSON | safe}};
-        var ids = {{ids | safe}};
+        // var ids = {{ids | safe}};
 
-        for(var i in graphs) {
-            Plotly.plot(ids[i], // the ID of the div, created above
-                        graphs[i].data,
-                        graphs[i].layout || {});
-        }
+       
+        //Plotly.plot(graphs);
+        Plotly.newPlot('myDiv', graphs.data, graphs.layout);
+        console.log(graphs.layout)
 
     </script>
 </footer>
