--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -16,7 +16,7 @@
         <input type="text" id="username"placeholder="username" name="username"required/>
         <input type="password" id="password"placeholder="password" name ="password"required/>
         <input type="text" id="name"placeholder ="name" name="name"required/>
-        <input type="text" id="skill"placeholder ="skill"name ="skill"required/>
+        <input type="text" id="skill"placeholder ="skill"name ="skill"required onchange="toggle()"/>
         <button>create</button>
         <p class="message">Already registered? <a href="/signin">Sign In</a></p>
       </form>
