--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -16,7 +16,7 @@
       <form class="login-form"action="/signin" method="POST">
 
         <input type="text" id="username"placeholder="username"name="username" required/>
-        <input type="password" id="password"placeholder="password"name="password" required/>
+        <input type="password" id="password"placeholder="password"name="username" required/>
         <button>login</button>
         <p class="message">Not registered? <a href="/signup">Create an account</a></p>
       </form>
