--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -17,7 +17,7 @@
 
         <input type="text" id="username"placeholder="username"name="username" required/>
         <input type="password" id="password"placeholder="password"name="password" required/>
-        <button>login</button>
+        <button id="buttonid">login</button>
         <p class="message">Not registered? <a href="/signup">Create an account</a></p>
       </form>
     </div>
