--- a/app/static/css/signup.css
+++ b/app/static/css/signup.css
@@ -6,6 +6,7 @@
   margin: auto;
   margin-top: 0px;
   padding-top:30px;
+  height:auto;
 }
 .form {
   position: relative;
@@ -14,6 +15,7 @@
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
+  height:auto;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
@@ -38,7 +40,7 @@ font-family: 'Lobster', cursive;
   box-sizing: border-box;
   font-size: 14px;
 }
-.form button {
+#buttonid{
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
@@ -47,12 +49,13 @@ font-family: 'Lobster', cursive;
   border: 0;
   padding: 15px;
   color: #FFFFFF;
+  margin-top:10px;
   font-size: 14px;
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
 }
-.form button:hover,.form button:active,.form button:focus {
+#buttonid:hover,#buttonid:active,#buttonid:focus {
   background: #43A047;
 }
 .form .message {
@@ -124,5 +127,63 @@ body {
 .ion-person{
   font-size: 50px;
   color:#636e72;
+
+}
+.dropbtn {
+    background-color: #8DC26F;
+    color: white;
+    padding: 1px;
+    height:30px;
+    width:170px;
+    border-radius:50px;
+    font-size: 16px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+    border: none;
+    cursor: pointer;
+  font-family: 'Oswald', sans-serif;
+}
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+#myInput {
+    border-box: box-sizing;
+    background-image: url('searchicon.png');
+    background-position: 14px 12px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 14px 20px 12px 45px;
+    border: none;
+    border-bottom: 1px solid #ddd;
+}
+
+#myInput:focus {outline: 3px solid #ddd;}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    min-width: 230px;
+    overflow: auto;
+    border: 1px solid #ddd;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #ddd}
+.show {display:block;}
+.skills{
 
 }
